@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.7 2008/03/17 10:49:39 c_anthon Exp $
+# $Id: Makefile.am,v 1.8 2008/06/10 08:09:16 c_anthon Exp $
 
-EXTRA_DIST= allgames.xpm beaver.xpm gnubg-big.xpm gnu.xpm hint_alt.xpm nextgame.xpm nextmarked.xpm nextmove.xpm prevgame.xpm prevmarked.xpm prevmove.xpm question.xpm resigns.xpm resign.xpm stock_cancel.xpm stock_edit.xpm stock_new_all.xpm stock_new_money.xpm stock_new.xpm stock_ok.xpm stock_open.xpm stock_save.xpm stock_stop_16.xpm stock_undo.xpm tb_anticlockwise.xpm tb_clockwise.xpm tb_double.xpm tb_edit.xpm tb_no.xpm tb_roll.xpm tb_stop.xpm tb_undo.xpm tb_yes.xpm x.xpm
+EXTRA_DIST= allgames.xpm beaver.xpm gnu.xpm hint_alt.xpm nextgame.xpm nextmarked.xpm nextmove.xpm prevgame.xpm prevmarked.xpm prevmove.xpm question.xpm resigns.xpm resign.xpm stock_cancel.xpm stock_edit.xpm stock_new_all.xpm stock_new_money.xpm stock_new.xpm stock_ok.xpm stock_open.xpm stock_save.xpm stock_undo.xpm tb_anticlockwise.xpm tb_clockwise.xpm tb_double.xpm tb_edit.xpm tb_no.xpm tb_roll.xpm tb_stop.xpm tb_undo.xpm tb_yes.xpm x.xpm
 
